[package]
name = "rawler"
version = "0.1.0"
authors = ["carl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
reqwest = { version = "0.11" }
regex = "1"
clap = "*"
url = { version = "2" }

